fixed logo size on small screens

--- a/app/components/HeroSection/HeroSection.module.css
+++ b/app/components/HeroSection/HeroSection.module.css
@@ -5,25 +5,7 @@
     /*2.15rem;*/
 }
 
-@media (max-width:582) {
-    .fronteraHacksLogo {
-        font-size: 50px;
-        text-wrap: pretty;
-        /*1.85rem;*/
-        line-height: 122%;
-        /*2.15rem;*/
-    }
-}
 
-@media (max-width:401) {
-    .fronteraHacksLogo {
-        font-size: 30px;
-        text-wrap: pretty;
-        /*1.85rem;*/
-        line-height: 122%;
-        /*2.15rem;*/
-    }
-}
 
 .dateText {
     font-size: .85rem;
@@ -134,6 +116,19 @@
 
     .btnText {
         font-size: 1.5rem;
+    }
+}
+
+@media (max-width:560px) {
+    .fronteraHacksLogo {
+        font-size: 3rem;
+    }
+}
+
+@media (max-width:390) {
+    .fronteraHacksLogo {
+        font-size: 2rem;
+        text-wrap: pretty;
     }
 }
 
